# failprint

./: .copier-answers.yml  .coverage-tmp.html  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Makefile  README.md  duties.py  gen_ref_nav.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tasks.py
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  pytest.ini  ruff.toml
config/vscode/: launch.json
contributing/: index.html
coverage/: covindex.html  d_55d53c7e00d34834_capture_py.html  d_55d53c7e00d34834_cli_py.html  d_55d53c7e00d34834_formats_py.html  d_55d53c7e00d34834_lazy_py.html  d_55d53c7e00d34834_process_py.html  d_55d53c7e00d34834_runners_py.html  d_55d53c7e00d34834_types_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_capture_py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_formats_py.html  d_a44f0ac069e85531_test_lazy_py.html  d_a44f0ac069e85531_test_process_py.html  d_a44f0ac069e85531_test_runners_py.html  index.html  src_failprint_capture_py.html  src_failprint_cli_py.html  src_failprint_formats_py.html  src_failprint_process_py.html  src_failprint_runners_py.html  src_failprint_types_py.html  status.json  tests_conftest_py.html  tests_test_capture_py.html  tests_test_cli_py.html  tests_test_formats_py.html  tests_test_process_py.html  tests_test_runners_py.html
credits/: index.html
docs/.overrides/partials/: comments.html
docs/reference/: api.md  capture.md  cli.md  formats.md  process.md  runners.md  types.md
license/: index.html
reference/: SUMMARY.txt
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/__main__/: index.html
reference/api/: index.html  index.md
reference/capture/: index.html
reference/cli/: index.html
reference/failprint/: index.html
reference/failprint/capture/: index.html
reference/failprint/cli/: index.html
reference/failprint/debug/: index.html
reference/failprint/formats/: index.html
reference/failprint/lazy/: index.html
reference/failprint/process/: index.html
reference/failprint/runners/: index.html
reference/failprint/types/: index.html
reference/formats/: index.html
reference/process/: index.html
reference/runners/: index.html
reference/types/: index.html
scripts/: gen_credits.py
search/: search_index.json
src/failprint/: __init__.py  __main__.py  capture.py  cli.py  debug.py  formats.py  lazy.py  process.py  runners.py  types.py
src/failprint/_internal/: capture.py  cli.py  debug.py  formats.py  lazy.py  process.py  runners.py  types.py
src/woof/: __main__.py  cli.py
tests/: __init__.py  smoketest.py  test_api.py  test_capture.py  test_cli.py  test_formats.py  test_lazy.py  test_process.py  test_runners.py
