[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "failprint"
description = "Run a command, print its output only if it fails."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["cli", "failure", "output", "runner"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "ansimarkup~=1.4",
    "jinja2>=2.11, <4",
    "ptyprocess~=0.6; sys_platform != 'win32'",
    "typing-extensions>=4.1; python_version < '3.10'",
]

[project.urls]
Homepage = "https://pawamoy.github.io/failprint"
Documentation = "https://pawamoy.github.io/failprint"
Changelog = "https://pawamoy.github.io/failprint/changelog"
Repository = "https://github.com/pawamoy/failprint"
Issues = "https://github.com/pawamoy/failprint/issues"
Discussions = "https://github.com/pawamoy/failprint/discussions"
Gitter = "https://gitter.im/failprint/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
failprint = "failprint.cli:main"

[tool.pdm]
version = { source = "scm" }
plugins = ["pdm-multirun"]

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"

[tool.pdm.dev-dependencies]
duty = ["duty>=0.10"]
ci-quality = ["failprint[duty,docs,quality,typing,security]"]
ci-tests = ["failprint[duty,tests]"]
docs = [
    "black>=23.9",
    "markdown-callouts>=0.3",
    "markdown-exec>=1.7",
    "mkdocs>=1.5",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-committers-plugin-2>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.4",
    "mkdocs-minify-plugin>=0.7",
    "mkdocstrings[python]>=0.23",
    "tomli>=2.0; python_version < '3.11'",
]
maintain = [
    "black>=23.9",
    "blacken-docs>=1.16",
    "git-changelog>=2.3",
]
quality = [
    "ruff>=0.0",
]
tests = [
    "hypothesis>=6.13",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-randomly>=3.15",
    "pytest-timeout>=2.1",
    "pytest-xdist>=3.3",
]
typing = [
    "mypy>=1.5",
    "types-markdown>=3.5",
    "types-pyyaml>=6.0",
]
security = [
    "safety>=2.3",
]
